--- a/wedding/wedding.css
+++ b/wedding/wedding.css
@@ -156,7 +156,7 @@ body{
         justify-content: center;
     }
     .cards {
-       background-image: url();
+       background-image: url(weddingbg3.jpeg);
         background-size: cover; /* Ensure background scales */
         height: auto; /* Dynamic height */
     }
