--- a/wedding/wedding.css
+++ b/wedding/wedding.css
@@ -156,9 +156,11 @@ body{
         justify-content: center;
     }
     .cards {
+        height: 700px;
+        width: 300px;
        background-image: url(weddingbg3.jpeg);
         background-size: cover; /* Ensure background scales */
-        height: auto; /* Dynamic height */
+    
     }
 
     h1 {
