--- a/wedding/wedding.css
+++ b/wedding/wedding.css
@@ -178,7 +178,13 @@ body{
         border-radius: 10px; /* Add smooth edges */
     }
      .countdown-container h1{
-        text-align: center;
+        
+            position: absolute; /* Anchor to bottom */
+            left: 50%; /* Center horizontally */
+            transform: translateX(-50%); /* Align perfectly in the center */
+            font-size: 18px; /* Smaller font for mobile screens */
+            text-align: center;
+        
     }
 
     .weddingclockcount {
