--- a/gallery/gallery.css
+++ b/gallery/gallery.css
@@ -275,12 +275,18 @@ button.Downloadbutt:hover {
         top:170px;
         font-size: 2px;
     }
-      .heading h1 {
+      .photos .heading h1 {
         
             position: absolute; /* Anchor to bottom */
-            top: 160px; /* Place slightly above the bottom */
+            top: 130px; /* Place slightly above the bottom */
             font-size: 18px; /* Smaller font for mobile screens */
        
+      }
+      .videos .heading h1 {
+        position: absolute;
+        bottom: 20px;
+        font-size: 18px;
+
       }
     
      
@@ -303,6 +309,6 @@ button.Downloadbutt:hover {
     button.Viewbutt 
     {
         position: relative;
-        top:10px;
+        top:30px;
     }
 }
